--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -67,6 +67,7 @@
         flex-direction: column
         justify-content: center
         align-items: center
+        margin-top: 0px
         top: 0
         left: -100%
         width: 50%
